// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Aff > tests applying rules for es 1`] = `
[
  [
    "'ababilla' Rules: E line: ababillar/RED",
    "'ababillaba' Rules: R line: ababillar/RED",
    "'ababillabais' Rules: R line: ababillar/RED",
    "'ababillaban' Rules: R line: ababillar/RED",
    "'ababillabas' Rules: R line: ababillar/RED",
    "'ababillad' Rules: R line: ababillar/RED",
    "'ababillada' Rules: D line: ababillar/RED",
    "'ababilladas' Rules: D line: ababillar/RED",
    "'ababillado' Rules: D line: ababillar/RED",
    "'ababillados' Rules: D line: ababillar/RED",
    "'ababillamos' Rules: R line: ababillar/RED",
    "'ababillan' Rules: E line: ababillar/RED",
    "'ababillando' Rules: R line: ababillar/RED",
    "'ababillar'",
    "'ababillara' Rules: R line: ababillar/RED",
    "'ababillarais' Rules: R line: ababillar/RED",
    "'ababillaran' Rules: R line: ababillar/RED",
    "'ababillaras' Rules: R line: ababillar/RED",
    "'ababillare' Rules: R line: ababillar/RED",
    "'ababillareis' Rules: R line: ababillar/RED",
    "'ababillaremos' Rules: R line: ababillar/RED",
    "'ababillaren' Rules: R line: ababillar/RED",
    "'ababillares' Rules: R line: ababillar/RED",
    "'ababillaron' Rules: R line: ababillar/RED",
    "'ababillarse' Rules: R line: ababillar/RED",
    "'ababillará' Rules: R line: ababillar/RED",
    "'ababillarán' Rules: R line: ababillar/RED",
    "'ababillarás' Rules: R line: ababillar/RED",
    "'ababillaré' Rules: R line: ababillar/RED",
    "'ababillaréis' Rules: R line: ababillar/RED",
    "'ababillaría' Rules: R line: ababillar/RED",
    "'ababillaríais' Rules: R line: ababillar/RED",
    "'ababillaríamos' Rules: R line: ababillar/RED",
    "'ababillarían' Rules: R line: ababillar/RED",
    "'ababillarías' Rules: R line: ababillar/RED",
    "'ababillas' Rules: E line: ababillar/RED",
    "'ababillase' Rules: R line: ababillar/RED",
    "'ababillaseis' Rules: R line: ababillar/RED",
    "'ababillasen' Rules: R line: ababillar/RED",
    "'ababillases' Rules: R line: ababillar/RED",
    "'ababillaste' Rules: R line: ababillar/RED",
    "'ababillasteis' Rules: R line: ababillar/RED",
    "'ababille' Rules: E line: ababillar/RED",
    "'ababillemos' Rules: R line: ababillar/RED",
    "'ababillen' Rules: E line: ababillar/RED",
    "'ababilles' Rules: E line: ababillar/RED",
    "'ababillo' Rules: E line: ababillar/RED",
    "'ababillá' Rules: R line: ababillar/RED",
    "'ababillábamos' Rules: R line: ababillar/RED",
    "'ababilláis' Rules: R line: ababillar/RED",
    "'ababillándose' Rules: R line: ababillar/RED",
    "'ababilláramos' Rules: R line: ababillar/RED",
    "'ababilláremos' Rules: R line: ababillar/RED",
    "'ababillás' Rules: R line: ababillar/RED",
    "'ababillásemos' Rules: R line: ababillar/RED",
    "'ababillé' Rules: R line: ababillar/RED",
    "'ababilléis' Rules: R line: ababillar/RED",
    "'ababilló' Rules: R line: ababillar/RED",
  ],
]
`;

exports[`Test Aff > tests applying rules for nl 1`] = `
[
  [
    "'-dc/CompoundEnd:CompoundMiddle:CompoundPermitted:KeepCase' Rules: Kc,Cw,Cb,Cc,Cp line: dc/ClCwKc",
    "'-dc-/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted:KeepCase' Rules: Kc,Cw,Cb,Cc,Cp,Cl,Ca,Cb,Cp line: dc/ClCwKc",
    "'dc/KeepCase' Rules: Kc line: dc/ClCwKc",
    "'dc-/CompoundBegin:CompoundMiddle:CompoundPermitted:KeepCase' Rules: Kc,Cl,Ca,Cb,Cp line: dc/ClCwKc",
  ],
  [
    "'aak'",
    "'aken/CompoundBegin:CompoundMiddle:CompoundPermitted' Rules: Zf,Ca,Cb,Cp line: aak/Zf",
    "'aken-/CompoundBegin:CompoundMiddle:CompoundPermitted' Rules: Zf,Ca,Cb,Cp line: aak/Zf",
  ],
  [
    "'huis/CompoundEnd' Rules: Cc line: huis/CACcYbCQZhC0",
    "'huis/CompoundBegin:CompoundEnd:CompoundPermitted' Rules: Cc,CA,Ca,Cp line: huis/CACcYbCQZhC0",
    "'huis-/CompoundBegin:CompoundEnd:CompoundPermitted' Rules: Cc,CA,Ca,Cp line: huis/CACcYbCQZhC0",
    "'huisje/CompoundEnd' Rules: Cc,Yb line: huis/CACcYbCQZhC0",
    "'huisjes/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Yb,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
    "'huisjes-/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Yb,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
    "'huizen/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Zh,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
    "'huizen-/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Zh,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
  ],
  [
    "'pannenkoek/CompoundEnd' Rules: Cc line: pannenkoek/ZbCACcC0",
    "'pannenkoek/CompoundBegin:CompoundEnd:CompoundPermitted' Rules: Cc,CA,Ca,Cp line: pannenkoek/ZbCACcC0",
    "'pannenkoek-/CompoundBegin:CompoundEnd:CompoundPermitted' Rules: Cc,CA,Ca,Cp line: pannenkoek/ZbCACcC0",
    "'pannenkoeken/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Zb,Ca,Cb,Cp line: pannenkoek/ZbCACcC0",
    "'pannenkoeken-/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Zb,Ca,Cb,Cp line: pannenkoek/ZbCACcC0",
  ],
]
`;

exports[`Test Aff > tests applying rules for nl huis 1`] = `
[
  "'huis/CompoundEnd' Rules: Cc line: huis/CACcYbCQZhC0",
  "'huis/CompoundBegin:CompoundEnd:CompoundPermitted' Rules: Cc,CA,Ca,Cp line: huis/CACcYbCQZhC0",
  "'huis-/CompoundBegin:CompoundEnd:CompoundPermitted' Rules: Cc,CA,Ca,Cp line: huis/CACcYbCQZhC0",
  "'huisje/CompoundEnd' Rules: Cc,Yb line: huis/CACcYbCQZhC0",
  "'huisjes/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Yb,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
  "'huisjes-/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Yb,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
  "'huizen/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Zh,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
  "'huizen-/CompoundBegin:CompoundEnd:CompoundMiddle:CompoundPermitted' Rules: Cc,Zh,Ca,Cb,Cp line: huis/CACcYbCQZhC0",
]
`;
